build/yaplParser.py
# Generated from yapl.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class yaplParser ( Parser ):

    grammarFileName = "yapl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "'}'", "'('", "','", "')'", 
                     "':'", "'<-'", "'~'", "'='", "'@'", "'.'", "<INVALID>", 
                     "<INVALID>", "'false'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'true'", "'let'", "<INVALID>", "<INVALID>", "'self'", 
                     "'SELF_TYPE'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'*'", "'/'", "'<'", "'<='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "CLASS", "ELSE", "FALSE", "FI", "IF", 
                      "IN", "INHERITS", "ISVOID", "LOOP", "POOL", "THEN", 
                      "WHILE", "NEW", "NOT", "TRUE", "LET", "TYPE_ID", "OBJECT_ID", 
                      "SELF", "SELF_TYPE", "STRING", "WHITESPACE", "NEWLINE", 
                      "INT", "COMMENT", "COMMENT_BLOCK", "PLUS", "MINUS", 
                      "MULT", "DIV", "LT", "LE" ]

    RULE_prog = 0
    RULE_class_def = 1
    RULE_feature = 2
    RULE_formal = 3
    RULE_asgn = 4
    RULE_expr = 5

    ruleNames =  [ "prog", "class_def", "feature", "formal", "asgn", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    CLASS=13
    ELSE=14
    FALSE=15
    FI=16
    IF=17
    IN=18
    INHERITS=19
    ISVOID=20
    LOOP=21
    POOL=22
    THEN=23
    WHILE=24
    NEW=25
    NOT=26
    TRUE=27
    LET=28
    TYPE_ID=29
    OBJECT_ID=30
    SELF=31
    SELF_TYPE=32
    STRING=33
    WHITESPACE=34
    NEWLINE=35
    INT=36
    COMMENT=37
    COMMENT_BLOCK=38
    PLUS=39
    MINUS=40
    MULT=41
    DIV=42
    LT=43
    LE=44

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def class_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.Class_defContext)
            else:
                return self.getTypedRuleContext(yaplParser.Class_defContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = yaplParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 15 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 12
                self.class_def()
                self.state = 13
                self.match(yaplParser.T__0)
                self.state = 17 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==yaplParser.CLASS):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Class_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(yaplParser.CLASS, 0)

        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.TYPE_ID)
            else:
                return self.getToken(yaplParser.TYPE_ID, i)

        def INHERITS(self):
            return self.getToken(yaplParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.FeatureContext)
            else:
                return self.getTypedRuleContext(yaplParser.FeatureContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_class_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClass_def" ):
                listener.enterClass_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClass_def" ):
                listener.exitClass_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClass_def" ):
                return visitor.visitClass_def(self)
            else:
                return visitor.visitChildren(self)




    def class_def(self):

        localctx = yaplParser.Class_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_class_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self.match(yaplParser.CLASS)
            self.state = 20
            self.match(yaplParser.TYPE_ID)
            self.state = 23
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==yaplParser.INHERITS:
                self.state = 21
                self.match(yaplParser.INHERITS)
                self.state = 22
                self.match(yaplParser.TYPE_ID)


            self.state = 25
            self.match(yaplParser.T__1)
            self.state = 31
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==yaplParser.OBJECT_ID:
                self.state = 26
                self.feature()
                self.state = 27
                self.match(yaplParser.T__0)
                self.state = 33
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 34
            self.match(yaplParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return yaplParser.RULE_feature

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Feat_asgnContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECT_ID(self):
            return self.getToken(yaplParser.OBJECT_ID, 0)
        def TYPE_ID(self):
            return self.getToken(yaplParser.TYPE_ID, 0)
        def expr(self):
            return self.getTypedRuleContext(yaplParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeat_asgn" ):
                listener.enterFeat_asgn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeat_asgn" ):
                listener.exitFeat_asgn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeat_asgn" ):
                return visitor.visitFeat_asgn(self)
            else:
                return visitor.visitChildren(self)


    class Feat_defContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECT_ID(self):
            return self.getToken(yaplParser.OBJECT_ID, 0)
        def TYPE_ID(self):
            return self.getToken(yaplParser.TYPE_ID, 0)
        def expr(self):
            return self.getTypedRuleContext(yaplParser.ExprContext,0)

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.FormalContext)
            else:
                return self.getTypedRuleContext(yaplParser.FormalContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeat_def" ):
                listener.enterFeat_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeat_def" ):
                listener.exitFeat_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeat_def" ):
                return visitor.visitFeat_def(self)
            else:
                return visitor.visitChildren(self)



    def feature(self):

        localctx = yaplParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = yaplParser.Feat_defContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 36
                self.match(yaplParser.OBJECT_ID)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==yaplParser.T__3:
                    self.state = 37
                    self.match(yaplParser.T__3)
                    self.state = 46
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==yaplParser.OBJECT_ID:
                        self.state = 38
                        self.formal()
                        self.state = 43
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        while _la==yaplParser.T__4:
                            self.state = 39
                            self.match(yaplParser.T__4)
                            self.state = 40
                            self.formal()
                            self.state = 45
                            self._errHandler.sync(self)
                            _la = self._input.LA(1)



                    self.state = 48
                    self.match(yaplParser.T__5)


                self.state = 51
                self.match(yaplParser.T__6)
                self.state = 52
                self.match(yaplParser.TYPE_ID)
                self.state = 53
                self.match(yaplParser.T__1)
                self.state = 54
                self.expr(0)
                self.state = 55
                self.match(yaplParser.T__2)
                pass

            elif la_ == 2:
                localctx = yaplParser.Feat_asgnContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.match(yaplParser.OBJECT_ID)
                self.state = 58
                self.match(yaplParser.T__6)
                self.state = 59
                self.match(yaplParser.TYPE_ID)
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==yaplParser.T__7:
                    self.state = 60
                    self.match(yaplParser.T__7)
                    self.state = 61
                    self.expr(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT_ID(self):
            return self.getToken(yaplParser.OBJECT_ID, 0)

        def TYPE_ID(self):
            return self.getToken(yaplParser.TYPE_ID, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFormal" ):
                return visitor.visitFormal(self)
            else:
                return visitor.visitChildren(self)




    def formal(self):

        localctx = yaplParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(yaplParser.OBJECT_ID)
            self.state = 67
            self.match(yaplParser.T__6)
            self.state = 68
            self.match(yaplParser.TYPE_ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AsgnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT_ID(self):
            return self.getToken(yaplParser.OBJECT_ID, 0)

        def TYPE_ID(self):
            return self.getToken(yaplParser.TYPE_ID, 0)

        def expr(self):
            return self.getTypedRuleContext(yaplParser.ExprContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_asgn

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAsgn" ):
                listener.enterAsgn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAsgn" ):
                listener.exitAsgn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAsgn" ):
                return visitor.visitAsgn(self)
            else:
                return visitor.visitChildren(self)




    def asgn(self):

        localctx = yaplParser.AsgnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_asgn)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(yaplParser.OBJECT_ID)
            self.state = 71
            self.match(yaplParser.T__6)
            self.state = 72
            self.match(yaplParser.TYPE_ID)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==yaplParser.T__7:
                self.state = 73
                self.match(yaplParser.T__7)
                self.state = 74
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return yaplParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class Expr_parenthesisContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(yaplParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_parenthesis" ):
                listener.enterExpr_parenthesis(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_parenthesis" ):
                listener.exitExpr_parenthesis(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_parenthesis" ):
                return visitor.visitExpr_parenthesis(self)
            else:
                return visitor.visitChildren(self)


    class Expr_negadoContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(yaplParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_negado" ):
                listener.enterExpr_negado(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_negado" ):
                listener.exitExpr_negado(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_negado" ):
                return visitor.visitExpr_negado(self)
            else:
                return visitor.visitChildren(self)


    class Expr_falseContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FALSE(self):
            return self.getToken(yaplParser.FALSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_false" ):
                listener.enterExpr_false(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_false" ):
                listener.exitExpr_false(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_false" ):
                return visitor.visitExpr_false(self)
            else:
                return visitor.visitChildren(self)


    class Expr_multContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ExprContext)
            else:
                return self.getTypedRuleContext(yaplParser.ExprContext,i)

        def MULT(self):
            return self.getToken(yaplParser.MULT, 0)
        def DIV(self):
            return self.getToken(yaplParser.DIV, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_mult" ):
                listener.enterExpr_mult(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_mult" ):
                listener.exitExpr_mult(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_mult" ):
                return visitor.visitExpr_mult(self)
            else:
                return visitor.visitChildren(self)


    class Expr_selfContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def SELF(self):
            return self.getToken(yaplParser.SELF, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_self" ):
                listener.enterExpr_self(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_self" ):
                listener.exitExpr_self(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_self" ):
                return visitor.visitExpr_self(self)
            else:
                return visitor.visitChildren(self)


    class Expr_instanceContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEW(self):
            return self.getToken(yaplParser.NEW, 0)
        def TYPE_ID(self):
            return self.getToken(yaplParser.TYPE_ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_instance" ):
                listener.enterExpr_instance(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_instance" ):
                listener.exitExpr_instance(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_instance" ):
                return visitor.visitExpr_instance(self)
            else:
                return visitor.visitChildren(self)


    class Expr_declContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LET(self):
            return self.getToken(yaplParser.LET, 0)
        def asgn(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.AsgnContext)
            else:
                return self.getTypedRuleContext(yaplParser.AsgnContext,i)

        def IN(self):
            return self.getToken(yaplParser.IN, 0)
        def expr(self):
            return self.getTypedRuleContext(yaplParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_decl" ):
                listener.enterExpr_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_decl" ):
                listener.exitExpr_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_decl" ):
                return visitor.visitExpr_decl(self)
            else:
                return visitor.visitChildren(self)


    class Expr_isvoidContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISVOID(self):
            return self.getToken(yaplParser.ISVOID, 0)
        def expr(self):
            return self.getTypedRuleContext(yaplParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_isvoid" ):
                listener.enterExpr_isvoid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_isvoid" ):
                listener.exitExpr_isvoid(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_isvoid" ):
                return visitor.visitExpr_isvoid(self)
            else:
                return visitor.visitChildren(self)


    class Expr_callContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECT_ID(self):
            return self.getToken(yaplParser.OBJECT_ID, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ExprContext)
            else:
                return self.getTypedRuleContext(yaplParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_call" ):
                listener.enterExpr_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_call" ):
                listener.exitExpr_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_call" ):
                return visitor.visitExpr_call(self)
            else:
                return visitor.visitChildren(self)


    class Expr_less_thanContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ExprContext)
            else:
                return self.getTypedRuleContext(yaplParser.ExprContext,i)

        def LT(self):
            return self.getToken(yaplParser.LT, 0)
        def LE(self):
            return self.getToken(yaplParser.LE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_less_than" ):
                listener.enterExpr_less_than(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_less_than" ):
                listener.exitExpr_less_than(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_less_than" ):
                return visitor.visitExpr_less_than(self)
            else:
                return visitor.visitChildren(self)


    class Expr_intContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(yaplParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_int" ):
                listener.enterExpr_int(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_int" ):
                listener.exitExpr_int(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_int" ):
                return visitor.visitExpr_int(self)
            else:
                return visitor.visitChildren(self)


    class Expr_class_callContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ExprContext)
            else:
                return self.getTypedRuleContext(yaplParser.ExprContext,i)

        def OBJECT_ID(self):
            return self.getToken(yaplParser.OBJECT_ID, 0)
        def TYPE_ID(self):
            return self.getToken(yaplParser.TYPE_ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_class_call" ):
                listener.enterExpr_class_call(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_class_call" ):
                listener.exitExpr_class_call(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_class_call" ):
                return visitor.visitExpr_class_call(self)
            else:
                return visitor.visitChildren(self)


    class Expr_equalContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ExprContext)
            else:
                return self.getTypedRuleContext(yaplParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_equal" ):
                listener.enterExpr_equal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_equal" ):
                listener.exitExpr_equal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_equal" ):
                return visitor.visitExpr_equal(self)
            else:
                return visitor.visitChildren(self)


    class Expr_strContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(yaplParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_str" ):
                listener.enterExpr_str(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_str" ):
                listener.exitExpr_str(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_str" ):
                return visitor.visitExpr_str(self)
            else:
                return visitor.visitChildren(self)


    class Expr_asgnContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECT_ID(self):
            return self.getToken(yaplParser.OBJECT_ID, 0)
        def expr(self):
            return self.getTypedRuleContext(yaplParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_asgn" ):
                listener.enterExpr_asgn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_asgn" ):
                listener.exitExpr_asgn(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_asgn" ):
                return visitor.visitExpr_asgn(self)
            else:
                return visitor.visitChildren(self)


    class Expr_bracketsContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ExprContext)
            else:
                return self.getTypedRuleContext(yaplParser.ExprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_brackets" ):
                listener.enterExpr_brackets(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_brackets" ):
                listener.exitExpr_brackets(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_brackets" ):
                return visitor.visitExpr_brackets(self)
            else:
                return visitor.visitChildren(self)


    class Expr_whileContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a yaplParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(yaplParser.WHILE, 0)
        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ExprContext)
            else:
                return self.getTypedRuleContext(yaplParser.ExprContext,i)

        def LOOP(self):
            return self.getToken(yaplParser.LOOP, 0)
        def POOL(self):
            return self.getToken(yaplParser.POOL, 0)
